@@ -410,10 +410,11 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
                                    sections:[ { title:undefined, items:[], min:1, more:undefined, grid:getLocalStorageBool("np-tabs-"+ARTIST_TAB+"-0-grid", false) },
                                               { title:undefined, html:undefined } ] },
                                  { value:ALBUM_TAB, title:undefined, ctitle:undefined, text:undefined, reqId:0, image: undefined,
-                                   sections:[ { title:undefined, items:[], min:2, more:undefined } ] },
+                                   sections:[ { title:undefined, items:[], min:2, more:undefined },
+                                              { title:undefined, items:[], min:1, more:undefined } ] },
                                  { value: TRACK_TAB, title:undefined, ctitle:undefined, text:undefined, lines:undefined, scroll:false, highlight:false, reqId:0, image: undefined,
                                    sections:[ { title:undefined, html:undefined } ] } ] },
-                 infoTrack: {album_id:undefined, track_id:undefined},
+                 infoTrack: {album_id:undefined, track_id:undefined, path:undefined},
                  trans: { expand:undefined, collapse:undefined, sync:undefined, unsync:undefined, more:undefined, dstm:undefined, randomMix:undefined,
                           repeatAll:undefined, repeatOne:undefined, repeatOff:undefined, shuffleAll:undefined, shuffleAlbums:undefined, shuffleOff:undefined,
                           play:undefined, pause:undefined, prev:undefined, next:undefined, collapseNp:undefined, expandNp:undefined, menu:undefined, browse:undefined, queue:undefined },
@@ -707,6 +708,7 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
             this.info.tabs[ARTIST_TAB].sections[0].title=lmsOptions.supportReleaseTypes ? i18n("Releases") : i18n("Albums");
             this.info.tabs[ARTIST_TAB].sections[1].title=i18n("Similar artists");
             this.info.tabs[ALBUM_TAB].sections[0].title=i18n("Tracks");
+            this.info.tabs[ALBUM_TAB].sections[1].title=i18n("Local files");
             this.info.tabs[TRACK_TAB].sections[0].title=i18n("Details");
         },
         showMenu(event) {
@@ -878,7 +880,8 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
                              albumartist_ids: this.playerStatus.current.albumartist_ids,
                              album: this.playerStatus.current.albumName,
                              album_id: this.playerStatus.current.album_id,
-                             url: this.playerStatus.current.url };
+                             url: this.playerStatus.current.url,
+                             path: localPath(this.playerStatus.current.url)};
             this.infoTrack.empty=undefined==this.infoTrack.title &&
                                  undefined==this.infoTrack.track_id &&
                                  undefined==this.infoTrack.artist &&
